src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__cost_dashboard__cost_dashboard_budget_over_90_percent.snap
---
source: src/tui/snapshot_tests/cost_dashboard.rs
expression: terminal.backend()
---
"┌─────────────────────────────────────────────────────── Budget ───────────────────────────────────────────────────────┐"
"│████████████████████████████████████████████████████████████████████████████████████████████████████████████████      │"
"│█████████████████████████████████████████████████$9.50 / $10.00 (95%) ██████████████████████████████████████████      │"
"│████████████████████████████████████████████████████████████████████████████████████████████████████████████████      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Sessions: 1  1 running  0 completed  0 errored     Avg cost: $9.50                                                   │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌─────────────────────────────────────────────────── Session Costs ────────────────────────────────────────────────────┐"
"│  ID           Title                                               Cost     Status    Elapsed                         │"
"│  ─────────────────────────────────────────────────────────────────────────────────────────                           │"
"│  #1           Add login flow                                    $9.50   RUNNING     2m30s                            │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
