src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__cost_dashboard__cost_dashboard_empty_sessions.snap
---
source: src/tui/snapshot_tests/cost_dashboard.rs
expression: terminal.backend()
---
"╔══════════════════════════════════════════════════════[ Budget ]══════════════════════════════════════════════════════╗"
"║                                                                                                                      ║"
"║                                            $0.00 spent (no budget limit)                                             ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
"╔══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗"
"║ Sessions: 0  0 running  0 completed  0 errored     Avg cost: $0.00                                                   ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
"╔══════════════════════════════════════════════════[ Session Costs ]═══════════════════════════════════════════════════╗"
"║  ID           Title                                               Cost     Status    Elapsed                         ║"
"║  ─────────────────────────────────────────────────────────────────────────────────────────                           ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
