src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__cost_dashboard__cost_dashboard_multiple_sessions_sorted_by_cost.snap
---
source: src/tui/snapshot_tests/cost_dashboard.rs
expression: terminal.backend()
---
"╔══════════════════════════════════════════════════════[ Budget ]══════════════════════════════════════════════════════╗"
"║█████████████████████                                                                                                 ║"
"║█████████████████████                            $0.90 / $5.00 (18%)                                                  ║"
"║█████████████████████                                                                                                 ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
"╔══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗"
"║ Sessions: 3  1 running  2 completed  0 errored     Avg cost: $0.30                                                   ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
"╔══════════════════════════════════════════════════[ Session Costs ]═══════════════════════════════════════════════════╗"
"║  ID           Title                                               Cost     Status    Elapsed                         ║"
"║  ─────────────────────────────────────────────────────────────────────────────────────────                           ║"
"║  #2           Expensive task                                    $0.50 COMPLETED     2m30s                            ║"
"║  #3           Medium task                                       $0.30   RUNNING     2m30s                            ║"
"║  #1           Cheap task                                        $0.10 COMPLETED     2m30s                            ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
