src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__cost_dashboard__cost_dashboard_no_budget.snap
---
source: src/tui/snapshot_tests/cost_dashboard.rs
expression: terminal.backend()
---
"╔══════════════════════════════════════════════════════[ Budget ]══════════════════════════════════════════════════════╗"
"║                                                                                                                      ║"
"║                                            $1.23 spent (no budget limit)                                             ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
"╔══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗"
"║ Sessions: 2  1 running  1 completed  0 errored     Avg cost: $0.61                                                   ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
"╔══════════════════════════════════════════════════[ Session Costs ]═══════════════════════════════════════════════════╗"
"║  ID           Title                                               Cost     Status    Elapsed                         ║"
"║  ─────────────────────────────────────────────────────────────────────────────────────────                           ║"
"║  #2           Fix crash                                         $1.11   RUNNING     2m30s                            ║"
"║  #1           Add login flow                                    $0.12 COMPLETED     2m30s                            ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
