src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__cost_dashboard__cost_dashboard_with_budget_under_threshold.snap
---
source: src/tui/snapshot_tests/cost_dashboard.rs
expression: terminal.backend()
---
"┌─────────────────────────────────────────────────────── Budget ───────────────────────────────────────────────────────┐"
"│████████████                                                                                                          │"
"│████████████                                     $1.00 / $10.00 (10%)                                                 │"
"│████████████                                                                                                          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Sessions: 1  0 running  1 completed  0 errored     Avg cost: $1.00                                                   │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌─────────────────────────────────────────────────── Session Costs ────────────────────────────────────────────────────┐"
"│  ID           Title                                               Cost     Status    Elapsed                         │"
"│  ─────────────────────────────────────────────────────────────────────────────────────────                           │"
"│  #1           Add login flow                                    $0.12 COMPLETED     2m30s                            │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
